--- a/WaveSynthExtension/Base.lproj/MainInterface.storyboard
+++ b/WaveSynthExtension/Base.lproj/MainInterface.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Audio Unit View Controller-->
+        <!--Wave SynthAU View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AudioUnitViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WaveSynthAUViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
