--- a/WaveSynthFramework/Base.lproj/MainInterface.storyboard
+++ b/WaveSynthFramework/Base.lproj/MainInterface.storyboard
@@ -35,8 +35,8 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Volume" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9p-Xm-Nk4">
-                                <rect key="frame" x="60" y="187" width="72" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9p-Xm-Nk4">
+                                <rect key="frame" x="74" y="187" width="58" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -57,14 +57,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.58005560579470128" blue="0.27396684659247583" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="exE-ff-bHx" firstAttribute="leading" secondItem="E9p-Xm-Nk4" secondAttribute="trailing" constant="24" id="4MN-QC-QKR"/>
                             <constraint firstItem="Z8P-A9-NaM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="28" id="AUr-tT-Rcq"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="centerX" secondItem="Z8P-A9-NaM" secondAttribute="centerX" id="T2r-3E-GSM"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="centerX" secondItem="Byu-Uc-NIA" secondAttribute="centerX" id="UaA-el-O80"/>
-                            <constraint firstItem="E9p-Xm-Nk4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="167" id="iap-7q-kt1"/>
+                            <constraint firstItem="exE-ff-bHx" firstAttribute="leading" secondItem="E9p-Xm-Nk4" secondAttribute="trailing" constant="24" id="m0w-cT-j6m"/>
                             <constraint firstItem="Byu-Uc-NIA" firstAttribute="top" secondItem="Z8P-A9-NaM" secondAttribute="bottom" constant="13" id="o7g-Ax-wEv"/>
                             <constraint firstItem="Z8P-A9-NaM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rnd-Pl-0LJ"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="top" secondItem="Byu-Uc-NIA" secondAttribute="bottom" constant="58" id="udn-B9-MuZ"/>
+                            <constraint firstItem="E9p-Xm-Nk4" firstAttribute="centerY" secondItem="exE-ff-bHx" secondAttribute="centerY" id="woo-qS-joh"/>
                         </constraints>
                     </view>
                     <connections>
