--- a/SynthFramework/Base.lproj/MainInterface.storyboard
+++ b/SynthFramework/Base.lproj/MainInterface.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-96" maxValue="24" translatesAutoresizingMaskIntoConstraints="NO" id="exE-ff-bHx">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="exE-ff-bHx">
                                 <rect key="frame" x="154" y="183" width="292" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="288" id="WOM-tx-giE"/>
@@ -35,8 +35,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume (dB)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9p-Xm-Nk4">
-                                <rect key="frame" x="38" y="187" width="94" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9p-Xm-Nk4">
+                                <rect key="frame" x="70" y="187" width="62" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -66,14 +66,14 @@
                                     <action selector="waveformChanged:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b3u-vL-wpB"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-96.00" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zs4-oR-88p" userLabel="Volume Value">
-                                <rect key="frame" x="467" y="187" width="53" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8a9-bo-nB3" userLabel="Pan Value">
+                                <rect key="frame" x="467" y="228" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8a9-bo-nB3" userLabel="Pan Value">
-                                <rect key="frame" x="467" y="228" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zs4-oR-88p" userLabel="Volume Value">
+                                <rect key="frame" x="467" y="187" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -81,18 +81,18 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.58005560579470128" blue="0.27396684659247583" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Zs4-oR-88p" firstAttribute="leading" secondItem="exE-ff-bHx" secondAttribute="trailing" constant="23" id="3ue-Nn-Txu"/>
                             <constraint firstItem="Z8P-A9-NaM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="28" id="AUr-tT-Rcq"/>
                             <constraint firstItem="LK0-Ol-27s" firstAttribute="top" secondItem="exE-ff-bHx" secondAttribute="bottom" constant="10" id="FGe-f5-QMV"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="centerX" secondItem="Z8P-A9-NaM" secondAttribute="centerX" id="T2r-3E-GSM"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="centerX" secondItem="Byu-Uc-NIA" secondAttribute="centerX" id="UaA-el-O80"/>
                             <constraint firstItem="rhU-kj-VTa" firstAttribute="trailing" secondItem="E9p-Xm-Nk4" secondAttribute="trailing" id="ZSr-at-pn9"/>
-                            <constraint firstItem="Zs4-oR-88p" firstAttribute="centerY" secondItem="exE-ff-bHx" secondAttribute="centerY" id="aeA-Sg-aSK"/>
                             <constraint firstItem="LK0-Ol-27s" firstAttribute="trailing" secondItem="exE-ff-bHx" secondAttribute="trailing" id="boU-nY-0wo"/>
                             <constraint firstItem="8a9-bo-nB3" firstAttribute="centerY" secondItem="LK0-Ol-27s" secondAttribute="centerY" id="bwe-Rv-JeO"/>
                             <constraint firstItem="LK0-Ol-27s" firstAttribute="leading" secondItem="exE-ff-bHx" secondAttribute="leading" id="gOG-Zs-hZI"/>
                             <constraint firstItem="rhU-kj-VTa" firstAttribute="top" secondItem="E9p-Xm-Nk4" secondAttribute="bottom" constant="18" id="jMd-rp-fFH"/>
+                            <constraint firstItem="Zs4-oR-88p" firstAttribute="leading" secondItem="8a9-bo-nB3" secondAttribute="leading" id="kVV-rz-mSS"/>
                             <constraint firstItem="exE-ff-bHx" firstAttribute="leading" secondItem="E9p-Xm-Nk4" secondAttribute="trailing" constant="24" id="m0w-cT-j6m"/>
+                            <constraint firstItem="Zs4-oR-88p" firstAttribute="baseline" secondItem="E9p-Xm-Nk4" secondAttribute="baseline" id="nIs-ak-VSk"/>
                             <constraint firstItem="Byu-Uc-NIA" firstAttribute="top" secondItem="Z8P-A9-NaM" secondAttribute="bottom" constant="13" id="o7g-Ax-wEv"/>
                             <constraint firstItem="8a9-bo-nB3" firstAttribute="leading" secondItem="LK0-Ol-27s" secondAttribute="trailing" constant="23" id="rbd-We-KNg"/>
                             <constraint firstItem="Z8P-A9-NaM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rnd-Pl-0LJ"/>
